--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700");
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,700i");
 /* normalize.css v6.0.0 | MIT License | github.com/necolas/normalize.css */
 html {
   line-height: 1.15; /* 1 */
@@ -491,32 +490,25 @@ span.taxonomy {
 }
 ul.all-tags li {
   list-style: none;
-  display: inline-block;
   margin: auto 5px;
 }
-ul.all-category li {
+ul.all-taxonomies li {
   list-style: none;
   font-family: Lato;
-  font-size: 20px;
+  font-size: 28px;
+  font-weight: bold;
 }
-a.tag {
-  background: rgba(0,0,0,0.05);
-  font-size: 13px;
+a.taxonomy-term {
   padding: 5px 10px;
-  color: rgba(0,0,0,0.6);
+  color: #0684bd;
   display: inline !important;
   border-radius: 3px;
 }
-a.tag:hover {
-  background: rgba(0,0,0,0.1);
-  color: rgba(0,0,0,0.6);
+a.taxonomy-term:hover {
+  text-decoration: underline;
 }
-a.category {
+a.taxonomy-term span.count {
   color: rgba(0,0,0,0.6);
-  display: inline !important;
-}
-a.category:hover {
-  color: #36d7b7;
 }
 span.in-tax-count {
   color: rgba(0,0,0,0.44);
