fix tag link, +post paper-notes

--- a/_styl/layout/nav.styl
+++ b/_styl/layout/nav.styl
@@ -46,6 +46,7 @@ nav.navbar
   a
     line-height: $navbar-height - $navbar-padding;
     font-size: $font-size-small
+    font-weight: 300
 
 
     &:hover
