--- a/_styl/core/code.styl
+++ b/_styl/core/code.styl
@@ -3,6 +3,11 @@ pre, code
 pre code
   background: transparent
 
+// inline
+:not(pre) > code
+  padding: 2px 4px
+  border-radius: 3px
+
 pre
   padding: 20px;
   white-space: pre-wrap;
