--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,12 +6,12 @@
       <div class="post-meta">
         <span class="post-category">
           {{ if isset .Params "category" }}
-            <a class="category" href="{{ $.Site.BaseURL }}category/{{ .Params.category | urlize }}/">{{ .Params.category }}</a>
+            <a class="category" href="{{ $.Site.BaseURL }}category/{{ lower .Params.category | urlize }}/">{{ .Params.category }}</a>
           {{ end }}
         </span>
       </div>
       <h1 class="title">
-        {{ .Title }}
+        {{ .Title | markdownify }}
       </h1>
       <div class="post-meta">
         <span class="post-date">
@@ -23,7 +23,7 @@
         </span>
       </div>
       {{ if isset .Params "image" }}
-      <img class="post-image full-width" src="{{ .Site.Params.Imgurl }}{{ .Params.image }}" alt="image from {{ .Title }}"/>
+      <img class="post-image" src="{{ .Site.Params.Imgurl }}{{ .Params.image }}" alt="image from {{ .Title }}"/>
 
       {{ end }}
       <section class="content">
