--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -17,7 +17,7 @@
         {{ range $key, $value := .Data.Terms.ByCount }}
           <li>
             <a class="taxonomy-term" href="/{{ $taxonomyname | urlize }}/{{ $value.Name | urlize }}">
-            {{ $value.Name }}
+            {{ replace $value.Name "-" " " | upper | markdownify }}
             <span class="count">{{ $value.Count }}</span>
             </a>
           </li>
