--- a/layouts/partials/summary.html
+++ b/layouts/partials/summary.html
@@ -3,12 +3,12 @@
     <div class="post-meta">
       <span class="post-category">
         {{ if isset .Params "category" }}
-          <a class="category" href="{{ $.Site.BaseURL }}category/{{ .Params.category | urlize }}/">{{ .Params.category }}</a>
+          <a class="category" href="{{ $.Site.BaseURL }}category/{{ lower .Params.category | urlize }}/">{{ .Params.category }}</a>
         {{ end }}
       </span>
     </div>
     <h2 class="title">
-        <a href="{{ .URL }}">{{ .Title }}</a>
+        <a href="{{ .URL }}">{{ .Title | markdownify }}</a>
     </h2>
     <div class="post-meta">
       <span class="post-date">
@@ -23,7 +23,7 @@
     <img src="{{ .Site.Params.Imgurl }}{{ .Params.image }}" class="post-list-image" alt="image from {{ .Title }}">
     {{ end }}
     <div class="description">
-      {{ .Description  }}
+      {{ .Description  | markdownify }}
     </div>
     <a class="readmore" href="{{ .URL }}">Read more...</a>
     <ul class="all-tags">
