--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -360,7 +360,7 @@ body {
   -moz-font-feature-settings: "liga" on;
   color: #333;
   font-size: 18px;
-  line-height: 1.4;
+  line-height: 1.5;
   min-height: 100%;
   display: flex;
   flex-direction: column;
@@ -682,6 +682,10 @@ code {
 pre code {
   background: transparent;
 }
+:not(pre) > code {
+  padding: 2px 4px;
+  border-radius: 3px;
+}
 pre {
   padding: 20px;
   white-space: pre-wrap;
@@ -774,6 +778,7 @@ nav.navbar li a {
 nav.navbar a {
   line-height: 30px;
   font-size: 17px;
+  font-weight: 300;
 }
 nav.navbar a:hover {
   color: #00ab6b;
