fix social links

--- a/layouts/partials/social-follow.html
+++ b/layouts/partials/social-follow.html
@@ -1,5 +1,5 @@
 <div class="social">
-  <a class="icon-wrapper" href="https://github.com/{{ .Site.Social.Github }}">
+  <a class="icon-wrapper" href="https://github.com/{{ .Site.Social.github }}">
     <div>
       <svg class="social" viewBox="0 0 64 64">
         <use class="use-icon" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/assets/svg/social-accounts.svg#github-icon"></use>
@@ -7,7 +7,7 @@
       </svg>
     </div>
   </a>
-  <a class="icon-wrapper" href="https://linkedin.com/in/{{ .Site.Social.Linkedin }}">
+  <a class="icon-wrapper" href="https://linkedin.com/in/{{ .Site.Social.linkedin }}">
     <div>
       <svg class="social" viewBox="0 0 64 64">
         <use class="use-icon" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/assets/svg/social-accounts.svg#linkedin-icon"></use>
