--- a/_styl/core/post.styl
+++ b/_styl/core/post.styl
@@ -1,11 +1,14 @@
 article
 
   h1.title
-    font-size: 2rem
+    font-size: 1.7rem
     margin-bottom: 10px
   section
     font-family: $font-family-for-reading
-    font-size: 1rem
+    font-size: .95rem
+
+    p
+      line-height: 1.8
 
 
 div.tags
@@ -27,6 +30,7 @@ div.tags
 .post-meta
   color: $post-meta-color
   font-size: $post-meta-size
+  margin: 1em auto
 
 a.category
   color: $jade
