--- a/_styl/layout/main.styl
+++ b/_styl/layout/main.styl
@@ -22,11 +22,12 @@ body
       h2.title
         margin-top: 0
         margin-bottom: 0
-        font-size: 29px
+        font-size: $font-size-headings-base
 
       .description
         font-family: $font-family-for-reading
         color: rgba(0,0,0,.8)
+        font-size: .9rem
 
       .readmore
         font-size: $read-more-font-size
