--- a/_styl/base/_variables.styl
+++ b/_styl/base/_variables.styl
@@ -60,6 +60,7 @@ $selection-color              = white
 // Font, line-height, and elements colors.
 // --------------------------------------------------
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700,700i');
 
 // Font families.
 $font-family-chinese      = "PingFang SC", "Microsoft YaHei"
@@ -77,7 +78,7 @@ $font-family-posts        = $font-family-base
 
 $font-family-monospace    = Menlo,Monaco,"Courier New",Courier,monospace;
 
-$font-family-for-reading = "Crimson Text", $font-family-base
+$font-family-for-reading = "Open Sans", $font-family-base
 
 // Font Weight
 $font-weight-lighter      = 200
@@ -86,7 +87,7 @@ $font-weight-normal       = 400
 $font-weight-bold         = 600
 $font-weight-bolder       = 700
 
-$font-size-base=          21px
+$font-size-base=          18px
 $font-size-large=         ceil(($font-size-base * 1.10)) // ~18px
 $font-size-small=         ceil(($font-size-base * 0.764285714)) // ~12px
 // $font-size-base-small-screen=       18px
@@ -107,7 +108,7 @@ $line-height-computed=    floor(($font-size-base * $line-height-base))  // ~20px
 
 // Headings font size
 $font-size-headings-step    = 2px
-$font-size-headings-base    = 28px
+$font-size-headings-base    = 25px
 $font-size-headings-small   = $font-size-headings-base - $font-size-headings-step
 $font-size-headings-smaller = $font-size-headings-small - $font-size-headings-step
 $font-size-headings-large   = $font-size-headings-base + $font-size-headings-step
