--- a/_styl/core/content.styl
+++ b/_styl/core/content.styl
@@ -6,10 +6,13 @@
     max-width: 100%
 
   a
-      border-bottom: 1px solid $jade;
+    color: $jade;
 
-      &:hover
-        border-bottom-width: 2px
+    &:hover
+      border-bottom-width: 2px
+
+  h1
+    margin: 0.5em 0
 
 //----------------------------------------------------
 // figures
